# llama_runtime

./: .gitignore  CMakeLists.txt  README.md  llama_spm  tokenizer.altok
pyllamart/: attn_test_case_generator.py  gpt2.config.ini  lrt_tensor.py  model_exporter.py  nn_test_case_generator.py  spm_exporter.py  tokenizer.test_case.txt
src/: blas_benchmark.cc  blas_kernel.cc  blas_kernel.h  blas_kernel_avx2.cc  blas_kernel_avx512.cc  blas_test.cc  bloom_model.cc  bloom_model.h  bpe_encoder.cc  bpe_encoder.h  bpe_model.cc  bpe_model.h  common.cc  common.h  env.cc  env.h  environment.cc  environment.h  gemm.cc  gemm.h  gemm_benchmark.cc  gemm_common.h  gemm_cpu.cc  gemm_internal.h  gemm_kernel.cc  gemm_kernel.h  gemm_kernel_avx2.cc  gemm_kernel_avx512.cc  gemm_kernel_default.cc  gemm_test.cc  gpt2_model.cc  gpt2_model.h  gpt2_model_benchmark.cc  gpt2_model_test.cc  ini_config.cc  ini_config.h  ini_parser.cc  ini_parser.h  io.cc  io.h  (+61 more)
src/common/: common.cc  common.h  environment.cc  environment.h  test_helper.cc  test_helper.h
src/flint/: CMakeLists.txt  cpu_operators.cc  cpu_operators.h  device.cc  device.h  dtype.cc  dtype.h  embedding.cc  embedding.h  nn.cc  nn.h  nn_test.cc  operators.cc  operators.h  operators_benchmark.cc  operators_test.cc  tensor.cc  tensor.h  tensor_data.cc  tensor_data.h  tensor_test.cc  util.cc  util.h
src/gentok/: CMakeLists.txt  tokenizer.cc  tokenizer.h  tokenizer_test.cc
src/llmpp/: CMakeLists.txt  chatglm2_model.cc  chatglm2_model.h  chatglm2_model_test.cc  environment.cc  environment.h  gpt2_model.cc  gpt2_model.h  gpt2_model_benchmark.cc  gpt2_model_test.cc  test_main.cc  transformer.cc  transformer.h  transformer_test.cc
src/llmrt/: CMakeLists.txt  environment.cc  environment.h  gpt2_model.cc  gpt2_model.h  gpt2_model_benchmark.cc  gpt2_model_test.cc  test_main.cc  transformer.cc  transformer.h  transformer_test.cc
src/llyn/: CMakeLists.txt  attributes.h  c_ptr.h  error.cc  error.h  fixed_array.h  ini_config.cc  ini_config.h  log.h  noncopyable.h  path.cc  path.h  path_linux.cc  path_test.cc  path_windows.cc  platform.h  platform_linux.cc  platform_windows.cc  pool.h  random.cc  random.h  reader.cc  reader.h  shared_library.h  shared_library_windows.cc  span.h  strings.cc  strings.h  strings_test.cc
src/llyn/internal/: base_array.h  log.cc  log.h  sprintf.cc  sprintf.h  utfcpp.h
src/model/: gpt2_model.cc  gpt2_model.h  gpt2_model_benchmark.cc  gpt2_model_test.cc  transformer.cc  transformer.h  transformer_test.cc
src/nn/: device.cc  device.h  dtype.cc  dtype.h  nn.cc  nn.h  nn_test.cc  nn_test_helper.cc  nn_test_helper.h  operators.cc  operators.h  operators_benchmark.cc  operators_cpu.cc  operators_cpu.h  operators_test.cc  tensor.cc  tensor.h  tensor_data.cc  tensor_data.h  tensor_test.cc
src/pmpack/: CMakeLists.txt  README.md  batch_sgemm.h  block.cc  block.h  gemm_benchmark.cc  gemm_common.h  gemm_fp32qint4fp32.h  gemm_kernel.h  gemm_kernel_avx2.cc  gemm_kernel_avx512.cc  gemm_kernel_fallback.cc  gemm_test.cc  pack.h  pmpack.cc  pmpack.h  sgemm.h  sgemv.h  util.cc  util.h
src/tokenizer/: tokenizer.cc  tokenizer.h
src/util/: ini_config.cc  log.cc  log.h  random.cc  random.h  reader.cc  reader.h  shared_library.h  shared_library_windows.cc  strings.cc  strings.h  util.cc  util.h  util_windows.cc
